logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -115,6 +115,7 @@ header {
   margin:0rem !important;
   height: 5rem !important;
   max-height: 5rem !important;
+  padding-left: 10px;
 
 }
 
